@@ -1,0 +1,48 @@
+<?php
+/***************************************************************
+* Copyright notice
+*
+* (c) 2008 Niels Pardon (mail@niels-pardon.de)
+* All rights reserved
+*
+* This script is part of the TYPO3 project. The TYPO3 project is
+* free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* The GNU General Public License can be found at
+* http://www.gnu.org/copyleft/gpl.html.
+*
+* This script is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+require_once(t3lib_extMgm::extPath('seminars') . 'class.tx_seminars_bagbuilder.php');
+require_once(t3lib_extMgm::extPath('seminars') . 'tests/fixtures/class.tx_seminars_testbag.php');
+
+/**
+ * Class 'tx_seminars_brokenTestingBagBuilder' for the 'seminars' extension.
+ *
+ * This builder class creates customized testbag objects.
+ *
+ * @package		TYPO3
+ * @subpackage	tx_seminars
+ *
+ * @author		Niels Pardon <mail@niels-pardon.de>
+ */
+class tx_seminars_brokenTestingBagBuilder extends tx_seminars_bagbuilder {
+	/**
+	 * @var	string		class name of the bag class that will be built
+	 */
+	protected $bagClassName = 'tx_seminars_testbag';
+}
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/tests/fixtures/class.tx_seminars_brokenTestingBagBuilder.php']) {
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/tests/fixtures/class.tx_seminars_brokenTestingBagBuilder.php']);
+}
+?>
